// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PhoneIntegrationPreferences/> render() should render 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            Integrations
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/phone"
          >
            Phone
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          🍏
           
          Fake phone integration
          <small
            class="text-muted ml-2"
          >
            +1 415-111-2222
          </small>
        </li>
      </ol>
    </nav>
  </div>
  <nav
    class="navbar navbar"
  >
    <a
      activeclassname="active"
      class="link"
      to="/app/settings/integrations/phone/1/preferences"
    >
      Preferences
    </a>
    <a
      activeclassname="active"
      class="link"
      to="/app/settings/integrations/phone/1/voicemail"
    >
      Voicemail
    </a>
    <a
      activeclassname="active"
      class="link"
      to="/app/settings/integrations/phone/1/greeting-message"
    >
      Greeting Message
    </a>
  </nav>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-lg-6 col-xl-7"
      >
        <form
          class=""
        >
          <div
            class="form-group"
          >
            <label
              class="control-label"
              for="title"
            >
              Phone title
            </label>
            <div
              class="container"
            >
              <div
                class="picker emojiPicker"
              >
                <span
                  class="icon"
                >
                  🍏
                </span>
              </div>
              <input
                class="input form-control"
                id="title"
                placeholder="Ex: Company Support Line"
                required=""
                tabindex="0"
                type="text"
                value="Fake phone integration"
              />
            </div>
          </div>
          <div
            class="form-group"
          >
            <label
              class="control-label"
              for="phone-number"
            >
              Phone number
            </label>
            <div
              class="input-group"
            >
              <input
                class="form-control"
                id="phone-number"
                readonly=""
                type="text"
                value="+1 415-111-2222"
              />
              <div
                class="input-group-append"
              >
                <button
                  class="copy-phone-number-button btn btn-secondary"
                  data-clipboard-target="#phone-number"
                  type="button"
                >
                  <i
                    class="material-icons mr-2"
                  >
                    file_copy
                  </i>
                  Copy
                </button>
              </div>
            </div>
          </div>
          <div
            class="form-group"
          >
            <label
              class="control-label"
            >
              Inbound calls
            </label>
            <div
              class="mb-2"
            >
              <label
                class="label"
                for="checkbox-1"
              >
                <input
                  checked=""
                  class="input"
                  id="checkbox-1"
                  name="checkbox-1"
                  type="checkbox"
                />
                Start recording automatically
              </label>
              <div
                class="caption"
              />
            </div>
            <div
              class="mb-2"
            >
              <label
                class="label"
                for="checkbox-2"
              >
                <input
                  checked=""
                  class="input"
                  id="checkbox-2"
                  name="checkbox-2"
                  type="checkbox"
                />
                Send calls to voicemail outside business hours
              </label>
              <div
                class="caption"
              >
                If a customer calls outside of business hours, they will be immediately forwarded to voicemail.
              </div>
            </div>
          </div>
          <div
            class="form-group"
          >
            <label
              class="control-label"
            >
              Outbound calls
            </label>
            <div>
              <label
                class="label"
                for="checkbox-3"
              >
                <input
                  checked=""
                  class="input"
                  id="checkbox-3"
                  name="checkbox-3"
                  type="checkbox"
                />
                Start recording automatically
              </label>
              <div
                class="caption"
              />
            </div>
          </div>
          <div
            class="mt-5"
          >
            <button
              class="btn btn-success"
              type="submit"
            >
              Save changes
            </button>
            <button
              class="wrapper float-right destructive medium"
              id="confirm-1615240000000"
              type="button"
            >
              <span
                class="wrapper"
              >
                <i
                  class="material-icons icon isLeft medium"
                >
                  delete
                </i>
                Delete phone number
              </span>
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PhoneIntegrationPreferences/> render() should render with IVR integration 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            Integrations
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/phone"
          >
            Phone
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          🍏
           
          Fake phone integration
          <small
            class="text-muted ml-2"
          >
            +1 415-111-2222
          </small>
        </li>
      </ol>
    </nav>
  </div>
  <nav
    class="navbar navbar"
  >
    <a
      activeclassname="active"
      class="link"
      to="/app/settings/integrations/phone/1/preferences"
    >
      Preferences
    </a>
    <a
      activeclassname="active"
      class="link"
      to="/app/settings/integrations/phone/1/voicemail"
    >
      Voicemail
    </a>
    <a
      activeclassname="active"
      class="link"
      to="/app/settings/integrations/phone/1/ivr"
    >
      IVR
    </a>
  </nav>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-lg-6 col-xl-7"
      >
        <form
          class=""
        >
          <div
            class="form-group"
          >
            <label
              class="control-label"
              for="title"
            >
              Phone title
            </label>
            <div
              class="container"
            >
              <div
                class="picker emojiPicker"
              >
                <span
                  class="icon"
                >
                  🍏
                </span>
              </div>
              <input
                class="input form-control"
                id="title"
                placeholder="Ex: Company Support Line"
                required=""
                tabindex="0"
                type="text"
                value="Fake phone integration"
              />
            </div>
          </div>
          <div
            class="form-group"
          >
            <label
              class="control-label"
              for="phone-number"
            >
              Phone number
            </label>
            <div
              class="input-group"
            >
              <input
                class="form-control"
                id="phone-number"
                readonly=""
                type="text"
                value="+1 415-111-2222"
              />
              <div
                class="input-group-append"
              >
                <button
                  class="copy-phone-number-button btn btn-secondary"
                  data-clipboard-target="#phone-number"
                  type="button"
                >
                  <i
                    class="material-icons mr-2"
                  >
                    file_copy
                  </i>
                  Copy
                </button>
              </div>
            </div>
          </div>
          <div
            class="form-group"
          >
            <label
              class="control-label"
            >
              Inbound calls
            </label>
            <div
              class="mb-2"
            >
              <label
                class="label"
                for="checkbox-4"
              >
                <input
                  checked=""
                  class="input"
                  id="checkbox-4"
                  name="checkbox-4"
                  type="checkbox"
                />
                Send calls to voicemail outside business hours
              </label>
              <div
                class="caption"
              >
                If a customer calls outside of business hours, they will be immediately forwarded to voicemail.
              </div>
            </div>
          </div>
          <div
            class="mt-5"
          >
            <button
              class="btn btn-success"
              type="submit"
            >
              Save changes
            </button>
            <button
              class="wrapper float-right destructive medium"
              id="confirm-1615240000000"
              type="button"
            >
              <span
                class="wrapper"
              >
                <i
                  class="material-icons icon isLeft medium"
                >
                  delete
                </i>
                Delete phone number
              </span>
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;
